# nebulatk

./: .gitignore  MANIFEST.in  README.md  __init__.py  bounds_manager.py  example.py  fonts_manager.py  nebulatk.py  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
examples/: _example_utils.py  container_scroll_demo.py  defaults_dark.py  defaults_light.py  defaults_theme_toggle.py  example.py  relativeplace.py  word_collage.py
nebulatk/: __init__.py  animation_controller.py  bounds_manager.py  colors_manager.py  defaults.py  file_manager.py  fonts_manager.py  image_manager.py  initialize.py  native_gl_window.py  nebulatk.py  new_widget.py  opengl_image_display.py  pil_image_renderer.py  rendering.py  standard_methods.py  taskbar_manager.py  widget_appearance.py
nebulatk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nebulatk/examples/: example.py
nebulatk/widgets/: __init__.py  base.py  button.py  container.py  entry.py  frame.py  label.py  slider.py
tests/: conftest.py  test_advanced_widgets.py  test_animation_controller.py  test_bounds_manager.py  test_colors_manager.py  test_container.py  test_defaults.py  test_file_dialog.py  test_fonts_manager.py  test_image_manager.py  test_integration.py  test_pil_image_renderer.py  test_render_performance.py  test_render_tick.py  test_rendering.py  test_taskbar_manager.py  test_widget_appearance.py  test_widget_children.py  test_widgets.py  test_window.py  test_window_internal.py
tests/default_profiles/: defaults_dark.py  defaults_light.py
tests/widgets/: test_button.py  test_entry.py  (+2 more)
