[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulatk"
version = "0.1.3"
description = "Improved tkinter-style gui system."
readme = "README.md"
authors = [{name = "Control-Alt-OP", email = "ctrl.alt.op@gmail.com"}]
keywords = ["tcl", "tkinter", "nebulatk", "gui", "transparency"]
dependencies = [
    "pillow",
    "tkinter"
]
requires-python = ">=3.9"
