[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulatk"
version = "0.1.3"
description = "Improved tkinter-style gui system."
readme = "README.md"
authors = [{name = "Control-Alt-OP", email = "ctrl.alt.op@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["tcl", "tkinter", "nebulatk", "gui", "transparency"]
dependencies = [
    "pillow",
    "tk"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/CTRL-ALT-OP/nebulatk"